tinyc/test/bad/struct-const-assign.c
struct s
{
    int x;
};

int main()
{
    const struct s s;

    s.x = 4;

    return 0;
}
